# RustyBench

./: .gitignore  Cargo.toml  LICENSE  README.md  build-forall-archs.sh
src/: cpu.rs  gpu.rs  lib.rs  main.rs
src/benches/: cpu_bench.rs
