[package]
name = "rustybench"
version = "1.0.2"
edition = "2021"

[dependencies]
rayon = "1.8"
criterion = "0.5"
num_cpus = "1.16"
colored = "3.0"
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.33.1"
rand = "0.8"
tokio = { version = "1.16", features = ["full"] }
wgpu = "24.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4.0"
futures-intrusive = "0.5"
futures = "0.3"
